# words-api

./: .gitignore  Cargo.toml  README.md  english.json
src/: data.rs  error.rs  main.rs  models.rs
src/data/: dictionary.rs
src/error/: query_error.rs
src/models/: dictionary.rs  query.rs
