[package]
name = "word_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.5"
actix-web = "4.4.0"
json = "0.12.4"
validator = { version = "0.16.1", features = ["derive"] }
derive_more = "0.99.17"
lazy_static = "1.4"

[profile.dev]
opt-level = 3